--- a/templates/domain-does-not-exist.html.jinja
+++ b/templates/domain-does-not-exist.html.jinja
@@ -1,13 +1,20 @@
-<!doctype html>
+<!doctype html data-bs-theme="dark">
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{domain}} | {{site_title}}</title>
+    <title>{{domain}} does not exist | {{site_title}}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <style>
+    </style>
   </head>
   <body>
-  
+    <main class="container">
+        <h1>{{site_title}}</h1>
+            <div class="row justify-content-center">
+                <h2 class="text-center">{{domain}} does not exist</h2>
+            </div>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   </body>
 </html>
