--- a/templates/domain.html.jinja
+++ b/templates/domain.html.jinja
@@ -165,6 +165,30 @@
                 {% endif %}
               </td>
             </tr>
+            {% if "tls" in host %}
+            <tr>
+              <th scope="row">TLS</th>
+              <td>
+                {% if host.tls %}
+                True
+                {% else %}
+                False
+                {% endif %}
+              </td>
+            </tr>
+            {% endif %}
+            {% if "starttls" in host %}
+            <tr>
+              <th scope="row">STARTTLS</th>
+              <td>
+                {% if host.starttls %}
+                True
+                {% else %}
+                False
+                {% endif %}
+              </td>
+            </tr>
+            {% endif %}
           </table>
           {% if host.dnssec and host.tlsa %}
           <div class="alert alert-success text-center w-auto" role="alert">
