--- a/templates/domain-does-not-exist.html.jinja
+++ b/templates/domain-does-not-exist.html.jinja
@@ -10,7 +10,7 @@
   </head>
   <body>
     <main class="container">
-        <h1>{{site_title}}</h1>
+        <h1><a href="/" class="text-decoration-none text-reset">{{site_title}}</a></h1>
             <div class="row justify-content-center">
                 <h2 class="text-center">{{domain}} does not exist</h2>
             </div>
