--- a/templates/index.html.jinja
+++ b/templates/index.html.jinja
@@ -12,7 +12,7 @@
 <body>
   <main>
     <div class="px-4 py-5 text-center">
-      <h1>{{site_title}}</h1>
+      <h1><a href="/" class="text-decoration-none text-reset">{{site_title}}</a></h1>
       <p class="lead">
         Check a domain for DNSSEC, SPF, DMARC, and more. Powered by
         <a href="https://domainaware.github.io/checkdmarc">checkdmarc</a>.
